# safeack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
safeack/: __main__.py  aws.py  client.py  logger.py  utils.py
